syntax = "proto3";

option go_package = "/cachepb";

message GetRequest {
  string group = 1;
  string key = 2;
}

message SetRequest{
  string group = 1;
  string key = 2;
  bytes value = 3;
}

message DeleteRequest{
  string group = 1;
  string key = 2;
}

message Response {
  bytes value = 1;
}

message GroupList{
  repeated string group_name = 1;
}

message GroupKeyList{
  repeated string key = 1;
}